[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/views/components/pattern_layout/loop_layout.gd" type="Script" id=2]

[node name="LoopLayout" type="VBoxContainer"]
margin_right = 1019.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
size_flags_vertical = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1064.0
margin_bottom = 22.0

[node name="BlankLayout" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 280.0
margin_bottom = 22.0
rect_min_size = Vector2( 280, 0 )

[node name="LoopList" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 284.0
margin_right = 1064.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LoopList"]
margin_right = 192.0
margin_bottom = 22.0
rect_min_size = Vector2( 192, 0 )

[node name="LoopPattern1" type="Button" parent="HBoxContainer/LoopList/VBoxContainer"]
margin_left = 86.0
margin_right = 106.0
margin_bottom = 22.0
size_flags_horizontal = 4
text = "1"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/LoopList"]
margin_left = 196.0
margin_right = 388.0
margin_bottom = 22.0
rect_min_size = Vector2( 192, 0 )

[node name="LoopPattern2" type="Button" parent="HBoxContainer/LoopList/VBoxContainer2"]
margin_left = 86.0
margin_right = 106.0
margin_bottom = 22.0
size_flags_horizontal = 4
text = "2"

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/LoopList"]
margin_left = 392.0
margin_right = 584.0
margin_bottom = 22.0
rect_min_size = Vector2( 192, 0 )

[node name="LoopPattern3" type="Button" parent="HBoxContainer/LoopList/VBoxContainer3"]
margin_left = 86.0
margin_right = 106.0
margin_bottom = 22.0
size_flags_horizontal = 4
text = "3"

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer/LoopList"]
margin_left = 588.0
margin_right = 780.0
margin_bottom = 22.0
rect_min_size = Vector2( 192, 0 )

[node name="LoopPattern4" type="Button" parent="HBoxContainer/LoopList/VBoxContainer4"]
margin_left = 86.0
margin_right = 106.0
margin_bottom = 22.0
size_flags_horizontal = 4
text = "4"

[connection signal="button_down" from="HBoxContainer/LoopList/VBoxContainer/LoopPattern1" to="." method="_on_LoopPattern1_button_down"]
[connection signal="button_down" from="HBoxContainer/LoopList/VBoxContainer2/LoopPattern2" to="." method="_on_LoopPattern2_button_down"]
[connection signal="button_down" from="HBoxContainer/LoopList/VBoxContainer3/LoopPattern3" to="." method="_on_LoopPattern3_button_down"]
[connection signal="button_down" from="HBoxContainer/LoopList/VBoxContainer4/LoopPattern4" to="." method="_on_LoopPattern4_button_down"]
